<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login3" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/registration"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email_id"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/sign_up_btn"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext"
        android:fontFamily="@font/alegreya_sc_bold_italic"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/switch_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_btn"
        android:layout_marginTop="20dp"
        android:text="@string/forget"
        android:layout_centerHorizontal="true"
        android:textColor="#5FB5FA"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/goto_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="#5FB5FA"
        android:textSize="18sp" />



    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:visibility="gone" />
</RelativeLayout>