<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/registration" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="40dp"
        android:layout_below="@id/registration"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/mobile"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:layout_below="@id/name"
        android:inputType="number"
        android:hint="@string/mobile"
        android:maxLength="10"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/edittext_background"/>
    <EditText
        android:id="@+id/email_id"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/mobile"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/edittext_background"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email_id"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext"
        android:fontFamily="@font/alegreya_sc_bold_italic"
        android:gravity="center"
        android:text="@string/reg"
        android:textColor="@color/switch_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Login?"
        android:textColor="#5FB5FA"
        android:textSize="18sp" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="150dp"/>
</RelativeLayout>