<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6DB5B4B4"
    tools:context=".Showallnews">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="#0389F4"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="250dp"
        android:paddingRight="5dp"
        android:text="@string/delete"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="#00B0FF"
        android:textSize="20sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:id="@+id/empty"
        android:visibility="gone"
        android:layout_marginTop="150dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/empty12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/alegreya_sc_bold_italic"
        android:text="@string/no_news"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty123"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_news"
        android:textStyle="italic"
        android:visibility="gone" />

<!--    <ProgressBar-->
<!--        android:id="@+id/progressbar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:id="@+id/recyclenews"/>


</LinearLayout>