<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_margin="2dp"
        app:cardCornerRadius="10dp"
        android:elevation="5dp"
        android:id="@+id/cardview">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/mainhead"
                android:padding="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:text="@string/Main_heading"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="6"
                    android:padding="3dp"
                    android:id="@+id/content"
                    android:textSize="15dp"
                    android:text="@string/Content_body">

                </TextView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:id="@+id/imageView"
                    android:src="@drawable/ic_launcher_foreground">

                </ImageView>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="13dp"
                android:textStyle="italic"
                android:id="@+id/author"
                android:textColor="@color/purple_700"
                android:paddingLeft="5dp"
                android:paddingBottom="3dp">

            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/time"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:text="@string/publish">

                </TextView>

                <ImageView
                  android:id="@+id/share"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_baseline_share"
                  android:layout_marginLeft="50dp"/>

                <ImageView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_bookmark_border_24"
                    android:layout_marginLeft="10dp" />


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>